--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -1,13 +1,14 @@
 {
   "name": "proyecto",
+  "homepage": "https://XimenaCarrasco56.github.io/JuguetesCoquita.2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.2.0",
